💄 새 교환일기 작성 -3 (일기장 작성 페이지) 제작 완료, 폰트 추가

--- a/budD_android/app/src/main/res/layout/activity_newpage_select_cover.xml
+++ b/budD_android/app/src/main/res/layout/activity_newpage_select_cover.xml
@@ -17,8 +17,8 @@
         android:textColor="#5c5c5c"
         android:layout_marginTop="26dp"
         android:lineSpacingExtra="1.5sp"
+        android:fontFamily="@font/kopubdotumbold"
         tools:text="표지를 선택해주세요." />
-<!--    android:fontFamily="@font/ko_pub_dotum"-->
     
     <Button
         android:layout_width="368dp"
@@ -35,5 +35,6 @@
         android:textStyle="bold"
         android:textSize="15sp"
         android:textColor="#ffffff"
+        android:fontFamily="@font/kopubdotumbold"
         android:background="@drawable/long_btn" />
 </LinearLayout>
