--- a/budD_android/app/src/main/res/values/styles.xml
+++ b/budD_android/app/src/main/res/values/styles.xml
@@ -1,10 +1,14 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">#ffffff</item>
+        <item name="colorPrimaryDark">#5c5c5c</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">#5c5c5c</item>
+        <item name="android:textColorSecondary">#5c5c5c</item>
+<!--        <item name="android:actionMenuTextColor">@color/colorText</item>-->
+
     </style>
 
 </resources>
