--- a/budD_android/app/src/main/res/layout/login.xml
+++ b/budD_android/app/src/main/res/layout/login.xml
@@ -94,6 +94,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
+        android:id="@+id/register"
         android:layout_width="50.3dp"
         android:layout_height="16.8dp"
         android:text="회원가입"
