--- a/budD_android/app/src/main/res/layout/activity_search.xml
+++ b/budD_android/app/src/main/res/layout/activity_search.xml
@@ -7,4 +7,7 @@
     tools:context=".SearchActivity">
 
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
