--- a/budD_android/app/src/main/res/layout/activity_newpage_select_cover.xml
+++ b/budD_android/app/src/main/res/layout/activity_newpage_select_cover.xml
@@ -18,9 +18,10 @@
         android:layout_marginTop="26dp"
         android:lineSpacingExtra="1.5sp"
         android:fontFamily="@font/kopubdotumbold"
-        tools:text="표지를 선택해주세요." />
+        android:text="표지를 선택해주세요." />
     
-    <Button
+    <ImageView
+        android:id="@+id/btnAlbum"
         android:layout_width="368dp"
         android:layout_height="426.2dp"
         android:layout_gravity="center"
