--- a/budD_android/app/src/main/res/layout/activity_newpage_write.xml
+++ b/budD_android/app/src/main/res/layout/activity_newpage_write.xml
@@ -20,6 +20,7 @@
             android:layout_marginTop="25dp">
 
             <EditText
+                android:id="@+id/editTitle"
                 android:layout_width="240dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/bmdohyeon"
@@ -27,6 +28,7 @@
                 android:hint="제목을 입력하세요." />
 
             <TextView
+                android:id="@+id/txtTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/kopubdotumbold"
@@ -39,6 +41,7 @@
                 android:text="2021-01-01" />
 
             <EditText
+                android:id="@+id/editDiary"
                 android:layout_marginTop="12dp"
                 android:layout_width="328dp"
                 android:layout_height="426dp"
@@ -52,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right">
                 <TextView
+                    android:id="@+id/txtTyping"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="normal"
@@ -100,6 +104,7 @@
 
 
             <Button
+                android:id="@+id/btnSubmit"
                 android:layout_width="match_parent"
                 android:layout_height="49.5dp"
                 android:layout_marginTop="21dp"
