--- a/budD_android/app/src/main/res/layout/activity_search.xml
+++ b/budD_android/app/src/main/res/layout/activity_search.xml
@@ -8,6 +8,9 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="17dp"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
