--- a/budD_android/app/src/main/res/layout/activity_page_view.xml
+++ b/budD_android/app/src/main/res/layout/activity_page_view.xml
@@ -9,39 +9,78 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp">
 
-    <!--제목-->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="제목입니다."
-        android:textSize="25sp"
-        android:textColor="#5c5c5c"
-        android:layout_marginTop="26dp"
-        android:fontFamily="@font/bmdohyeon"
-        android:lineSpacingExtra="0.32sp"
-        />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <!--날짜-->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2021-01-09"
-        android:textSize="13.8sp"
-        android:textStyle="bold"
-        android:layout_gravity="right"
-        android:fontFamily="@font/kopubdotumbold"
-        android:textColor="#7f7f7f"
-        android:layout_marginTop="26dp"
-        />
+            <!--제목-->
+            <TextView
+                android:id="@+id/txtTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="제목입니다."
+                android:textSize="25sp"
+                android:textColor="#5c5c5c"
+                android:layout_marginTop="26dp"
+                android:fontFamily="@font/bmdohyeon"
+                android:lineSpacingExtra="0.32sp"
+                />
 
-    <!--일기 내용-->
-    <ImageView
-        android:layout_width="328dp"
-        android:layout_height="426.2dp" />
+            <!--날짜-->
+            <TextView
+                android:id="@+id/txtTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2021-01-09"
+                android:textSize="13.8sp"
+                android:textStyle="bold"
+                android:layout_gravity="right"
+                android:fontFamily="@font/kopubdotumbold"
+                android:textColor="#7f7f7f"
+                android:layout_marginTop="26dp"
+                />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="5dp"></LinearLayout>
+            <!--일기 내용-->
+            <TextView
+                android:id="@+id/txtDiary"
+                android:layout_width="328dp"
+                android:layout_height="426dp"
+                android:layout_marginTop="12dp"
+                android:text="hhhhh"
+                android:padding="12dp"
+                android:background="@drawable/edit_bg"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/kopubdotumbold"
+                android:textStyle="bold"
+                android:textSize="13.8sp"
+                android:textColor="#8fabb8"
+                android:layout_marginTop="25dp"
+                android:letterSpacing="0.01"
+                android:lineSpacingExtra="1.5sp"
+                android:text="From." />
+
+            <TextView
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/kopubdotumbold"
+                android:textStyle="bold"
+                android:textSize="13.8sp"
+                android:textColor="#7f7f7f"
+                android:letterSpacing="0.01"
+                android:lineSpacingExtra="1.5sp"
+                android:text="닉네임" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
 
