--- a/budD_android/app/src/main/res/layout/activity_setting.xml
+++ b/budD_android/app/src/main/res/layout/activity_setting.xml
@@ -127,7 +127,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="562dp"
-        android:background="@drawable/registerbtn"
+        android:background="@drawable/modify_long_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
