--- a/budD_android/app/src/main/res/menu/options_menu.xml
+++ b/budD_android/app/src/main/res/menu/options_menu.xml
@@ -7,4 +7,7 @@
         android:title="Search"
         app:showAsAction="always"
         app:actionViewClass="android.widget.SearchView" />
+    <item
+        android:id="@+id/action_break"
+        android:title="절교" />
 </menu>
